NetworkService + Policy: Add QUIC network service crash tests.

Previously, on network service crash, QUIC was only being re-disabled
on the first use of the system NetworkContext. This was incidentally
fixed in https://chromium-review.googlesource.com/1067959. This CL adds
policy browser tests for that case to protect against regression.

Bug: 845772
Change-Id: Ie0e0afa02d36807288f56f75782c94d4c1f8ca78
Reviewed-on: https://chromium-review.googlesource.com/1087408
Reviewed-by: Ryan Hamilton <rch@chromium.org>
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566521}
Former-commit-id: 7c6443c7a6153d1d40cb54b7361b730b0d0890e4