content/public/test/browser_test_utils.cc
@@ -2553,24 +2553,6 @@ bool IsNetworkServiceRunningInProcess() {
           base::FeatureList::IsEnabled(features::kNetworkServiceInProcess));
 }
 
-void SimulateNetworkServiceCrash() {
-  CHECK(base::FeatureList::IsEnabled(network::features::kNetworkService));
-  CHECK(!IsNetworkServiceRunningInProcess())
-      << "Can't crash the network service if it's running in-process!";
-  network::mojom::NetworkServiceTestPtr network_service_test;
-  ServiceManagerConnection::GetForProcess()->GetConnector()->BindInterface(
-      mojom::kNetworkServiceName, &network_service_test);
-
-  base::RunLoop run_loop(base::RunLoop::Type::kNestableTasksAllowed);
-  network_service_test.set_connection_error_handler(run_loop.QuitClosure());
-
-  network_service_test->SimulateCrash();
-  run_loop.Run();
-
-  // Make sure the cached NetworkServicePtr receives error notification.
-  FlushNetworkServiceInstanceForTesting();
-}
-
 int LoadBasicRequest(network::mojom::NetworkContext* network_context,
                      const GURL& url,
                      int process_id,
